--- a/independent.html
+++ b/independent.html
@@ -71,8 +71,8 @@
                                     <li class="dropdown">
                                         <a href="about-2.html">About</a>
                                         <ul>
-                                            <li><a href="">Our Team</a></li>
-                                            <li><a href="">Work with Us</a></li>
+                                            <li><a href="team-2.html">Our Team</a></li>
+                                            <li><a href="contact-2.html">Work with Us</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -82,7 +82,7 @@
                                             <li><a href="contact-2.html">Partner With Us</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="">Services</a>
+                                    <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li class="dropdown">
                                                 <a href="services.html">HomeCare Services</a>
@@ -206,11 +206,11 @@
                     <!--Content Side-->
                     <div class="content-side col-lg-8 col-md-12 col-sm-12">
                         <div class="service-details">
+                            <h3>Independent Care in Nigeria</h3>
                             <div class="main-image image">
                                 <img src="images/africa-humanitarian-aid-doctor-taking-care-patient.jpg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3>Independent Care in Nigeria</h3>
                                 <p>After an illness or injury, individuals often need care and support to regain their independence in the comfort of their own homes. At Homecare Nigeria, we provide specialised reablement services to help individuals transition smoothly from hospital stays or recovery periods back to daily life at home.</p>
                                 <p>Our reablement teams are equipped with the skills and expertise needed to support and empower individuals in reclaiming their independence. Unlike traditional home care services, our focus is not just on physical recovery but also on addressing the emotional challenges that may arise during the healing process. We understand the toll illness or injury can take on both individuals and their families, and we are committed to providing compassionate care throughout this journey.</p>
                                 <div class="featured">
@@ -246,20 +246,20 @@
                                         <h4>All Independent Services</h4>
                                     </div>
                                     <ul>
-                                        <li><a href="web-development.html">Arthritis</a></li>
-                                        <li><a href="web-development.html">Providing Care for Children</a></li>
-                                        <li><a href="web-development.html">Joint Replacement</a></li>
-                                        <li><a href="web-development.html">Multiple Sclerosis</a></li>
-                                        <li><a href="web-development.html">Stroke Care</a></li>
-                                        <li><a href="web-development.html">Brain Injury</a></li>
-                                        <li><a href="web-development.html">Diabetes</a></li>
-                                        <li><a href="web-development.html">Hypertension</a></li>
-                                        <li><a href="web-development.html">Spinal Injury</a></li>
-                                        <li><a href="web-development.html">Bariatric</a></li>
-                                        <li><a href="web-development.html">Neurological</a></li>
-                                        <li><a href="web-development.html">Nephrostomy</a></li>
-                                        <li><a href="web-development.html">Stoma</a></li>
-                                        <li><a href="web-development.html">Cancer</a></li>
+                                        <li><a href="arthritis.html">Arthritis</a></li>
+                                        <li><a href="childrencare.html">Providing Care for Children</a></li>
+                                        <li><a href="jointreplacement.html">Joint Replacement</a></li>
+                                        <li><a href="sclerosis.html">Multiple Sclerosis</a></li>
+                                        <li><a href="stroke.html">Stroke Care</a></li>
+                                        <li><a href="braininjury.html">Brain Injury</a></li>
+                                        <li><a href="diabetes.html">Diabetes</a></li>
+                                        <li><a href="hypertension.html">Hypertension</a></li>
+                                        <li><a href="spinalinjury.html">Spinal Injury</a></li>
+                                        <li><a href="bariatric.html">Bariatric</a></li>
+                                        <li><a href="neurological.html">Neurological</a></li>
+                                        <li><a href="nephrostomy.html">Nephrostomy</a></li>
+                                        <li><a href="stoma.html">Stoma</a></li>
+                                        <li><a href="cancer.html">Cancer</a></li>
                                 </div>
                             </div>
 
@@ -309,7 +309,7 @@
                             <div class="footer-widget logo-widget">
                                 <div class="widget-content">
                                     <div class="logo">
-                                        <a href="index.html"><img id="fLogo" src="images/footer-logo.png" alt="" /></a>
+                                        <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
                                     <ul class="social-links clearfix">
@@ -323,26 +323,36 @@
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <div class="column col-xl-6 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget links-widget">
                                 <div class="widget-content">
                                     <h6>Explore</h6>
                                     <div class="row clearfix">
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
                                                 <li><a href="#">About</a></li>
-                                                <li><a href="#">Meet Our Team</a></li>
-                                                <li><a href="#">Our Portfolio</a></li>
-                                                <li><a href="#">Latest News</a></li>
-                                                <li><a href="#">Contact</a></li>
+                                                <li><a href="#">HomeCare Nigeria</a></li>
+                                                <li><a href="#">Domiciliary Care</a></li>
+                                                <li><a href="#">Specialist Care</a></li>
+                                                <li><a href="#">Independent Care</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
-                                                <li><a href="#">Support</a></li>
-                                                <li><a href="#">Privacy Policy</a></li>
-                                                <li><a href="#">Terms of Use</a></li>
-                                                <li><a href="#">Help</a></li>
+                                                <li><a href="#">Find Carers</a></li>
+                                                <li><a href="#">Health Travels</a></li>
+                                                <li><a href="#">Procedures</a></li>
+                                                <li><a href="#">Destinations</a></li>
+                                                <li><a href="#">How It Works</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-4 col-sm-12">
+                                            <ul>
+                                                <li><a href="#">Contact Us</a></li>
+                                                <li><a href="#">Blog</a></li>
+                                                <li><a href="#">Calculator</a></li>
+                                                <li><a href="#">Partner With Us</a></li>
+                                                <li><a href="#">Work With Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -362,11 +372,12 @@
                                                 href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a></li>
                                     </ul>
                                 </div>
+                                
                             </div>
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <!-- <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget newsletter-widget">
                                 <div class="widget-content">
                                     <h6>Newsletter</h6>
@@ -384,7 +395,7 @@
                                         mails.</div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
 
