--- a/specialist.html
+++ b/specialist.html
@@ -71,8 +71,8 @@
                                     <li class="dropdown">
                                         <a href="about-2.html">About</a>
                                         <ul>
-                                            <li><a href="">Our Team</a></li>
-                                            <li><a href="">Work with Us</a></li>
+                                            <li><a href="team-2.html">Our Team</a></li>
+                                            <li><a href="contact-2.html">Work with Us</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -82,7 +82,7 @@
                                             <li><a href="contact-2.html">Partner With Us</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="">Services</a>
+                                    <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li class="dropdown">
                                                 <a href="services.html">HomeCare Services</a>
@@ -206,11 +206,12 @@
                     <!--Content Side-->
                     <div class="content-side col-lg-8 col-md-12 col-sm-12">
                         <div class="service-details">
+                            <h3>Specialist Care in Nigeria</h3>
                             <div class="main-image image">
                                 <img src="images/african-american-medical-team-working-healing-patient-hospital-ward-bed-man-woman-with-doctors-occupation-examining-young-adult-treatment-using-monitor-stethoscope.jpg" alt="">
                             </div>
                             <div class="text-content">
-                                <h3>Specialist Care in Nigeria</h3>
+                                <!-- <h3>Specialist Care in Nigeria</h3> -->
                                 <p>At Homecare Nigeria, we provide tailored specialist care services for individuals with unique needs resulting from illness or injury. Our highly trained caregivers offer compassionate and reliable support to ensure every client receives the care they need to live comfortably and independently.</p>
                                 <p>Our specialist care packages are personalized to meet specific health conditions, whether it’s personal care, medication management, or mobility assistance. We thoroughly assess each client’s needs to create a customized care plan, ensuring they receive the highest standard of care.</p>
                                 <!-- <div class="featured">
@@ -251,11 +252,11 @@
                                         <h4>All Specialist Services</h4>
                                     </div>
                                     <ul>
-                                        <li><a href="web-development.html">Dementia</a></li>
-                                        <li><a href="web-development.html">Parkinson</a></li>
-                                        <li><a href="web-development.html">Physical Disability</a></li>
-                                        <li><a href="web-development.html">Learning Disability</a></li>
-                                        <li><a href="web-development.html">End of Life</a></li>
+                                        <li><a href="dementia.html">Dementia</a></li>
+                                        <li><a href="parkinson.html">Parkinson</a></li>
+                                        <li><a href="physicaldisability.html">Physical Disability</a></li>
+                                        <li><a href="learningdisability.html">Learning Disability</a></li>
+                                        <li><a href="endoflife.html">End of Life</a></li>
                                 </div>
                             </div>
 
@@ -266,7 +267,7 @@
                                     </div>
                                     <div class="text">Prefer speaking with a human to filling out a form? call corporate
                                         office and we will connect you with a team member who can help.</div>
-                                    <div class="phone"><a href="tel:666888000"><span class="icon flaticon-call"></span>
+                                    <div class="phone"><a href="tel:+234(0)9059735426"><span class="icon flaticon-call"></span>
                                             +234(0)9059735426 </a></div>
                                 </div>
                             </div>
@@ -284,9 +285,9 @@
                 <div class="inner clearfix">
                     <h2>We’re Ready to Bring Bigger <br>& Stronger Projects</h2>
                     <div class="link-box">
-                        <a class="theme-btn btn-style-two" href="about.html">
+                        <a class="theme-btn btn-style-two" href="contact-2.html">
                             <i class="btn-curve"></i>
-                            <span class="btn-title">Contact with us</span>
+                            <span class="btn-title">Contact us</span>
                         </a>
                     </div>
                 </div>
@@ -305,7 +306,7 @@
                             <div class="footer-widget logo-widget">
                                 <div class="widget-content">
                                     <div class="logo">
-                                        <a href="index.html"><img id="fLogo" src="images/footer-logo.png" alt="" /></a>
+                                        <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
                                     <ul class="social-links clearfix">
@@ -319,26 +320,36 @@
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <div class="column col-xl-6 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget links-widget">
                                 <div class="widget-content">
                                     <h6>Explore</h6>
                                     <div class="row clearfix">
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
                                                 <li><a href="#">About</a></li>
-                                                <li><a href="#">Meet Our Team</a></li>
-                                                <li><a href="#">Our Portfolio</a></li>
-                                                <li><a href="#">Latest News</a></li>
-                                                <li><a href="#">Contact</a></li>
+                                                <li><a href="#">HomeCare Nigeria</a></li>
+                                                <li><a href="#">Domiciliary Care</a></li>
+                                                <li><a href="#">Specialist Care</a></li>
+                                                <li><a href="#">Independent Care</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
-                                                <li><a href="#">Support</a></li>
-                                                <li><a href="#">Privacy Policy</a></li>
-                                                <li><a href="#">Terms of Use</a></li>
-                                                <li><a href="#">Help</a></li>
+                                                <li><a href="#">Find Carers</a></li>
+                                                <li><a href="#">Health Travels</a></li>
+                                                <li><a href="#">Procedures</a></li>
+                                                <li><a href="#">Destinations</a></li>
+                                                <li><a href="#">How It Works</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-4 col-sm-12">
+                                            <ul>
+                                                <li><a href="#">Contact Us</a></li>
+                                                <li><a href="#">Blog</a></li>
+                                                <li><a href="#">Calculator</a></li>
+                                                <li><a href="#">Partner With Us</a></li>
+                                                <li><a href="#">Work With Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -358,11 +369,12 @@
                                                 href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a></li>
                                     </ul>
                                 </div>
+                                
                             </div>
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <!-- <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget newsletter-widget">
                                 <div class="widget-content">
                                     <h6>Newsletter</h6>
@@ -380,7 +392,7 @@
                                         mails.</div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
 
