--- a/event-details.html
+++ b/event-details.html
@@ -913,7 +913,7 @@
                             <div class="footer-widget logo-widget">
                                 <div class="widget-content">
                                     <div class="logo">
-                                        <a href="index.html"><img id="fLogo" src="images/footer-logo.png" alt="" /></a>
+                                        <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">Welcome to our web design
                                         agency. Lorem ipsum simply free text
