--- a/partners.html
+++ b/partners.html
@@ -72,8 +72,8 @@
                                     <li class="dropdown">
                                         <a href="about-2.html">About</a>
                                         <ul>
-                                            <li><a href="">Our Team</a></li>
-                                            <li><a href="">Work with Us</a></li>
+                                            <li><a href="team-2.html">Our Team</a></li>
+                                            <li><a href="contact-2.html">Work with Us</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -83,7 +83,7 @@
                                             <li><a href="contact-2.html">Partner With Us</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="">Services</a>
+                                    <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li class="dropdown">
                                                 <a href="services.html">HomeCare Services</a>
@@ -293,7 +293,7 @@
                 <div class="auto-container clearfix">
                     <h2>Want to Partner with Us?</h2>
                     <div class="link-box">
-                        <a class="theme-btn btn-style-two" href="about.html">
+                        <a class="theme-btn btn-style-two" href="contact-2.html">
                             <i class="btn-curve"></i>
                             <span class="btn-title">Send Us a Message</span>
                         </a>
@@ -303,7 +303,7 @@
         </section>
 
         <!-- Main Footer -->
-        <footer class="main-footer">
+        <footer class="main-footer normal-padding">
             <div class="auto-container">
                 <!--Widgets Section-->
                 <div class="widgets-section">
@@ -314,7 +314,7 @@
                             <div class="footer-widget logo-widget">
                                 <div class="widget-content">
                                     <div class="logo">
-                                        <a href="index.html"><img id="fLogo" src="images/footer-logo.png" alt="" /></a>
+                                        <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
                                     <ul class="social-links clearfix">
@@ -328,26 +328,36 @@
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <div class="column col-xl-6 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget links-widget">
                                 <div class="widget-content">
                                     <h6>Explore</h6>
                                     <div class="row clearfix">
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
                                                 <li><a href="#">About</a></li>
-                                                <li><a href="#">Meet Our Team</a></li>
-                                                <li><a href="#">Our Portfolio</a></li>
-                                                <li><a href="#">Latest News</a></li>
-                                                <li><a href="#">Contact</a></li>
+                                                <li><a href="#">HomeCare Nigeria</a></li>
+                                                <li><a href="#">Domiciliary Care</a></li>
+                                                <li><a href="#">Specialist Care</a></li>
+                                                <li><a href="#">Independent Care</a></li>
                                             </ul>
                                         </div>
-                                        <div class="col-md-6 col-sm-12">
+                                        <div class="col-md-4 col-sm-12">
                                             <ul>
-                                                <li><a href="#">Support</a></li>
-                                                <li><a href="#">Privacy Policy</a></li>
-                                                <li><a href="#">Terms of Use</a></li>
-                                                <li><a href="#">Help</a></li>
+                                                <li><a href="#">Find Carers</a></li>
+                                                <li><a href="#">Health Travels</a></li>
+                                                <li><a href="#">Procedures</a></li>
+                                                <li><a href="#">Destinations</a></li>
+                                                <li><a href="#">How It Works</a></li>
+                                            </ul>
+                                        </div>
+                                        <div class="col-md-4 col-sm-12">
+                                            <ul>
+                                                <li><a href="#">Contact Us</a></li>
+                                                <li><a href="#">Blog</a></li>
+                                                <li><a href="#">Calculator</a></li>
+                                                <li><a href="#">Partner With Us</a></li>
+                                                <li><a href="#">Work With Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
@@ -367,11 +377,12 @@
                                                 href="mailto:info@excelsiahealth.net">info@excelsiahealth.net</a></li>
                                     </ul>
                                 </div>
+                                
                             </div>
                         </div>
 
                         <!--Column-->
-                        <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
+                        <!-- <div class="column col-xl-3 col-lg-6 col-md-6 col-sm-12">
                             <div class="footer-widget newsletter-widget">
                                 <div class="widget-content">
                                     <h6>Newsletter</h6>
@@ -389,7 +400,7 @@
                                         mails.</div>
                                 </div>
                             </div>
-                        </div>
+                        </div> -->
 
                     </div>
 
