--- a/procedure.html
+++ b/procedure.html
@@ -71,8 +71,8 @@
                                     <li class="dropdown">
                                         <a href="about-2.html">About</a>
                                         <ul>
-                                            <li><a href="">Our Team</a></li>
-                                            <li><a href="">Work with Us</a></li>
+                                            <li><a href="team-2.html">Our Team</a></li>
+                                            <li><a href="contact-2.html">Work with Us</a></li>
                                         </ul>
                                     </li>
                                     <li class="dropdown">
@@ -82,7 +82,7 @@
                                             <li><a href="contact-2.html">Partner With Us</a></li>
                                         </ul>
                                     </li>
-                                    <li class="dropdown"><a href="">Services</a>
+                                    <li class="dropdown"><a href="services.html">Services</a>
                                         <ul>
                                             <li class="dropdown">
                                                 <a href="services.html">HomeCare Services</a>
@@ -351,7 +351,7 @@
                             <div class="footer-widget logo-widget">
                                 <div class="widget-content">
                                     <div class="logo">
-                                        <a href="index.html"><img id="fLogo" src="images/footer-logo.png" alt="" /></a>
+                                        <a href="index.html"><img id="fLogo" src="images/nav-logo.png" alt="" /></a>
                                     </div>
                                     <div class="text">Your Trusted Partner in Health and Well-being. We provide exceptional home care, social care, medical and birth tourism services tailored to your needs. Incorporated in Nigeria with RC1421192</div>
                                     <ul class="social-links clearfix">
