march 7th second

--- a/faqs.html
+++ b/faqs.html
@@ -588,29 +588,29 @@
                                     <div class="row clearfix">
                                         <div class="col-md-4 col-sm-12">
                                             <ul>
-                                                <li><a href="#">About</a></li>
-                                                <li><a href="#">HomeCare Nigeria</a></li>
-                                                <li><a href="#">Domiciliary Care</a></li>
-                                                <li><a href="#">Specialist Care</a></li>
-                                                <li><a href="#">Independent Care</a></li>
+                                                <li><a href="about-2.html">About</a></li>
+                                                <li><a href="services.html">HomeCare Nigeria</a></li>
+                                                <li><a href="domiciliary.html">Domiciliary Care</a></li>
+                                                <li><a href="specialist.html">Specialist Care</a></li>
+                                                <li><a href="independent.html">Independent Care</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-4 col-sm-12">
                                             <ul>
                                                 <li><a href="#">Find Carers</a></li>
-                                                <li><a href="#">Health Travels</a></li>
-                                                <li><a href="#">Procedures</a></li>
-                                                <li><a href="#">Destinations</a></li>
-                                                <li><a href="#">How It Works</a></li>
+                                                <li><a href="about.html">Health Travels</a></li>
+                                                <li><a href="procedure.html">Procedures</a></li>
+                                                <li><a href="destination.html">Destinations</a></li>
+                                                <li><a href="how-it-works.html">How It Works</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-4 col-sm-12">
                                             <ul>
-                                                <li><a href="#">Contact Us</a></li>
-                                                <li><a href="#">Blog</a></li>
+                                                <li><a href="contact-2.html">Contact Us</a></li>
+                                                <li><a href="blog-grid.html">Blog</a></li>
                                                 <li><a href="#">Calculator</a></li>
-                                                <li><a href="#">Partner With Us</a></li>
-                                                <li><a href="#">Work With Us</a></li>
+                                                <li><a href="contact-2.html">Partner With Us</a></li>
+                                                <li><a href="contact-2.html">Work With Us</a></li>
                                             </ul>
                                         </div>
                                     </div>
