--- a/about.html
+++ b/about.html
@@ -264,7 +264,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-responsive"></span></div>
-                            <h6><a href="#">Comprehensive Medical and Birth Tourism Consultation</a></h6>
+                            <h6>Comprehensive Medical and Birth Tourism Consultation</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -272,7 +272,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-computer"></span></div>
-                            <h6><a href="#">Hospital and Doctor Selection</a></h6>
+                            <h6>Hospital and Doctor Selection</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -280,7 +280,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-digital-marketing"></span></div>
-                            <h6><a href="#">Visa Application and Travel Assistance</a></h6>
+                            <h6>Visa Application and Travel Assistance</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -288,7 +288,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-responsive"></span></div>
-                            <h6><a href="#">Travel and Accommodation Arrangements</a></h6>
+                            <h6>Travel and Accommodation Arrangements</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -296,7 +296,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-computer"></span></div>
-                            <h6><a href="#">Medical Treatment and Delivery Coordination</a></h6>
+                            <h6>Medical Treatment and Delivery Coordination</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -304,7 +304,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-digital-marketing"></span></div>
-                            <h6><a href="#">Post-Treatment and Post-Delivery Care</a></h6>
+                            <h6>Post-Treatment and Post-Delivery Care</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -312,7 +312,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-digital-marketing"></span></div>
-                            <h6><a href="#">Financial Planning and Payment Assistance</a></h6>
+                            <h6>Financial Planning and Payment Assistance</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -320,7 +320,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-responsive"></span></div>
-                            <h6><a href="#">Local Support and Concierge Services</a></h6>
+                            <h6>Local Support and Concierge Services</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -328,7 +328,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-computer"></span></div>
-                            <h6><a href="#">Ethical and Legal Support</a></h6>
+                            <h6>Ethical and Legal Support</h6>
                         </div>
                     </div>
                     <!--Service Block-->
@@ -336,7 +336,7 @@
                         <div class="inner-box">
                             <div class="bottom-curve"></div>
                             <div class="icon-box"><span class="flaticon-digital-marketing"></span></div>
-                            <h6><a href="#">Personalized Care and 24/7 Support</a></h6>
+                            <h6>Personalized Care and 24/7 Support</h6>
                         </div>
                     </div>
                     
